@@ -191,6 +191,21 @@ void construct_std_options()
     "[STD] Number of threads available to both I/O and "
     "initial data transformations for each rank. (Default: 4)",
     4);
+  arg_parser.add_option(
+    LBANN_OPTION_MAX_IO_RNG_BANKS,
+    {"--max_io_thread_rngs"},
+    utils::ENV("LBANN_MAX_IO_RNG_BANKS"),
+    "[STD] Maximum number of random number generator banks available to "
+    "both I/O and initial data transformations for each rank. (Default: 128)",
+    128);
+  arg_parser.add_option(
+    LBANN_OPTION_OMP_NUM_THREADS,
+    {"--omp_num_threads"},
+    utils::ENV("OMP_NUM_THREADS"), // Use the standard environment
+                                   // variable if available
+    "[STD] Number of OpenMP (OMP) threads available for "
+    "CPU layers. (Default: 4)",
+    4);
   arg_parser.add_option(LBANN_OPTION_OPTIMIZER,
                         {"--optimizer"},
                         "[STD] Optimizer input file",
